<resources>

    <string name="app_name">ProCalc</string>

    <!-- Dados Antropométricos -->
    <!-- Idade -->
    <string name="txt_idade">Idade</string>
    <string name="hint_idade">21</string>

    <!-- Altura -->
    <string name="txt_Altura">Altura</string>
    <string name="unidade_Altura">cm</string>
    <string name="hint_Altura">178</string>

    <!-- Peso -->
    <string name="txt_Peso">Peso</string>
    <string name="unidade_Peso">kg</string>
    <string name="hint_Peso">79</string>
    <!-- Botao Calcular -->
    <string name="btn_Calcular">Calcular</string>

    <!-- Menu -->
    <string name="btnSobre">Sobre</string>

    <!-- Activitie Informações -->
    <string name="textoSobre">Calculadore de Previstos ou Teóricos para a população Brasileira</string>
    <string name="textoSobre2">De acordo com as equações de Pereira - 1992 {Pneumobil} e Mallozi - 19995</string>
    <string name="textoSobre3">Autor: Dr. Sérgio R. Nacif - Trabalho de Mestrado - Univap 2006</string>

    <string name="textoSobre4">Desenvolvido por: Fábrica de Apps Uninove - 2016</string>
</resources>
