<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="espirometria.fabricaapp.uninove.com.br.procalcinterface.MainActivity">

    <!-- Campos Idade e Sexo -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/linearLayoutIdadeSexo">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_idade"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/txtIdade"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:hint="@string/hint_idade"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:inputType="textCapWords|textPersonName"
            android:singleLine="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="F"
            android:id="@+id/btnFemale" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="M"
            android:id="@+id/btnMale" />

    </LinearLayout>

    <!-- Campo Altura -->
    <!-- layout_below posiciona um layout abaixo de outro -->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutIdadeSexo"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutAltura">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_Altura"
            android:id="@+id/textView" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:id="@+id/txtAltura"
            android:hint="@string/hint_Altura"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:inputType="textCapWords|textPersonName" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/unidade_Altura"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayoutAltura"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayoutPeso">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/txt_Peso" />

        <EditText
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:id="@+id/txtPeso"
            android:hint="@string/hint_Peso"
            android:layout_centerInParent="true"
            android:gravity="center_horizontal"
            android:inputType="number"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/unidade_Peso"
            android:id="@+id/textView2" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayoutPeso"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_Calcular"
            android:id="@+id/btnCalcular" />
    </LinearLayout>


</RelativeLayout>
